--- a/src/css/style.css
+++ b/src/css/style.css
@@ -35,10 +35,12 @@ img {
 	--dark-color: #221f20;
 	--container-padding-inline: 13%;
 	--footer-padding-inline: 10%;
+
 	@media screen and (max-width: 768px) {
 		--container-padding-inline: 6%;
 		--footer-padding-inline: 6%;
 	}
+
 	@media screen and (max-width: 576px) {
 		--container-padding-inline: 15px;
 		--footer-padding-inline: 15px;
@@ -61,9 +63,11 @@ html {
 	font-style: normal;
 	font-weight: 400;
 	line-height: normal;
+
 	span {
 		position: relative;
 	}
+
 	span::after {
 		content: "";
 		display: block;
@@ -74,9 +78,11 @@ html {
 		height: 2px;
 		background-color: #000;
 	}
+
 	@media screen and (max-width: 768px) {
 		font-size: 36px;
 	}
+
 	@media screen and (max-width: 576px) {
 		font-size: 24px;
 	}
@@ -87,11 +93,13 @@ html {
 	min-height: 100vh;
 	background: url("../img/main_bg.jpg") center center / cover no-repeat;
 	padding-top: 75px;
+
 	@media screen and (max-width: 768px) {
 		& {
 			background-image: url("../img/tablet_bg.jpg");
 		}
 	}
+
 	@media screen and (max-width: 576px) {
 		min-height: 500px;
 		padding-top: 50px;
@@ -99,14 +107,16 @@ html {
 }
 
 .promo__title {
-	color: var(--light-color, #f5f5f7);
+	color: red;
 	font-size: 60px;
 	font-weight: 400;
 	line-height: normal;
 	text-transform: uppercase;
+
 	@media screen and (max-width: 768px) {
 		font-size: 48px;
 	}
+
 	@media screen and (max-width: 576px) {
 		font-size: 26px;
 	}
@@ -118,11 +128,13 @@ html {
 	font-size: 32px;
 	font-weight: 100;
 	line-height: normal;
+
 	@media screen and (max-width: 768px) {
 		& {
 			margin-top: 80px;
 		}
 	}
+
 	@media screen and (max-width: 576px) {
 		margin-top: 30px;
 		font-size: 16px;
@@ -146,6 +158,7 @@ html {
 	line-height: normal;
 	cursor: pointer;
 	transition: all 0.3s ease-out;
+
 	@media screen and (max-width: 576px) {
 		font-size: 14px;
 		width: 120px;
@@ -166,13 +179,16 @@ html {
 	font-style: normal;
 	font-weight: 100;
 	line-height: normal;
+
 	address {
 		font-style: normal;
 	}
+
 	a {
 		color: inherit;
 		text-decoration: none;
 	}
+
 	&::before {
 		content: "";
 		display: block;
@@ -183,19 +199,23 @@ html {
 		height: 49px;
 		background: url("../icons/arrow.svg") center center / cover no-repeat;
 	}
+
 	@media screen and (max-width: 768px) {
 		& {
 			margin-top: 80px;
 		}
+
 		&::before {
 			left: -40px;
 		}
 	}
+
 	@media screen and (max-width: 750px) {
 		&::before {
 			display: none;
 		}
 	}
+
 	@media screen and (max-width: 576px) {
 		margin-top: 233px;
 	}
@@ -210,12 +230,11 @@ html {
 	padding: 0 360px;
 	width: 100%;
 	height: 20px;
-	background: linear-gradient(
-		180deg,
-		rgba(255, 255, 255, 0.04) 0%,
-		rgba(255, 255, 255, 0.12) 50%,
-		rgba(255, 255, 255, 0.2) 100%
-	);
+	background: linear-gradient(180deg,
+			rgba(255, 255, 255, 0.04) 0%,
+			rgba(255, 255, 255, 0.12) 50%,
+			rgba(255, 255, 255, 0.2) 100%);
+
 	li {
 		list-style-type: none;
 		color: var(--light-color, #f5f5f7);
@@ -223,20 +242,24 @@ html {
 		font-weight: 100;
 		line-height: normal;
 	}
+
 	@media screen and (max-width: 1440px) {
 		& {
 			padding: 0 20px;
 		}
 	}
+
 	@media screen and (max-width: 768px) {
 		& li:nth-last-child(-n + 6) {
 			display: none;
 		}
 	}
+
 	@media screen and (max-width: 576px) {
 		& {
 			margin-top: 10px;
 		}
+
 		& li:nth-last-child(-n + 11) {
 			display: none;
 		}
@@ -246,6 +269,7 @@ html {
 .about {
 	padding-top: 80px;
 	background-color: var(--light-color);
+
 	@media screen and (max-width: 576px) {
 		padding-top: 50px;
 	}
@@ -266,15 +290,19 @@ html {
 	font-size: 40px;
 	font-weight: 400;
 	line-height: normal;
+
 	span {
 		color: #a5a5a5;
 	}
+
 	@media screen and (max-width: 1440px) {
 		width: 100%;
 	}
+
 	@media screen and (max-width: 768px) {
 		font-size: 24px;
 	}
+
 	@media screen and (max-width: 375px) {
 		font-size: 16px;
 	}
@@ -284,11 +312,13 @@ html {
 	display: flex;
 	column-gap: 10px;
 	margin-top: 80px;
+
 	@media screen and (max-width: 768px) {
 		margin-top: 40px;
 		flex-wrap: wrap;
 		row-gap: 40px;
 	}
+
 	@media screen and (max-width: 375px) {
 		margin-top: 20px;
 		row-gap: 20px;
@@ -297,10 +327,12 @@ html {
 
 .services__items {
 	width: 50%;
+
 	ul {
 		margin-top: 20px;
 		padding: 0;
 	}
+
 	li {
 		position: relative;
 		margin-top: 10px;
@@ -310,6 +342,7 @@ html {
 		font-style: normal;
 		font-weight: 400;
 		line-height: normal;
+
 		&:first-child::before {
 			content: "";
 			display: block;
@@ -320,6 +353,7 @@ html {
 			height: 15px;
 			background: url("../icons/camera.svg") center center / cover no-repeat;
 		}
+
 		&:nth-child(3):before {
 			content: "";
 			display: block;
@@ -331,25 +365,31 @@ html {
 			background: url("../icons/edit.svg") center center / cover no-repeat;
 		}
 	}
+
 	@media screen and (max-width: 768px) {
 		& {
 			width: 100%;
 		}
+
 		& li:first-child::before {
 			left: -25px;
 		}
+
 		& li:nth-child(3):before {
 			left: -25px;
 		}
 	}
+
 	@media screen and (max-width: 576px) {
 		& li:first-child::before {
 			display: none;
 		}
+
 		& li:nth-child(3):before {
 			display: none;
 		}
 	}
+
 	@media screen and (max-width: 375px) {
 		& li {
 			font-size: 14px;
@@ -364,6 +404,7 @@ html {
 	font-style: italic;
 	font-weight: 400;
 	line-height: normal;
+
 	@media screen and (max-width: 375px) {
 		font-size: 12px;
 	}
@@ -376,9 +417,11 @@ html {
 	font-weight: 400;
 	line-height: normal;
 	letter-spacing: 0.4px;
+
 	@media screen and (max-width: 768px) {
 		width: 100%;
 	}
+
 	@media screen and (max-width: 375px) {
 		font-size: 12px;
 		letter-spacing: 0.24px;
@@ -388,6 +431,7 @@ html {
 .works {
 	padding-top: 80px;
 	background-color: var(--light-color);
+
 	@media screen and (max-width: 768px) {
 		padding-top: 50px;
 	}
@@ -400,15 +444,18 @@ html {
 	column-gap: 30px;
 	row-gap: 50px;
 	margin-top: 50px;
+
 	img {
 		width: 100%;
 		box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.25);
 	}
+
 	@media screen and (max-width: 768px) {
 		column-gap: 20px;
 		row-gap: 30px;
 		margin-top: 40px;
 	}
+
 	@media screen and (max-width: 576px) {
 		grid-template-columns: 1fr;
 		grid-template-rows: repeat(4, 1fr) 1.5fr;
@@ -420,6 +467,7 @@ html {
 .inspiration {
 	padding-top: 80px;
 	background-color: var(--light-color);
+
 	@media screen and (max-width: 768px) {
 		padding-top: 50px;
 	}
@@ -431,19 +479,23 @@ html {
 	grid-template-rows: repeat(2, 1fr);
 	gap: 30px;
 	margin-top: 50px;
+
 	img {
 		width: 100%;
 		box-shadow: 5px 5px 10px 0px rgba(0, 0, 0, 0.25);
 	}
+
 	/* После 1200 фотки кажутся слишком маленькими, так что лучше адаптировать */
 	@media screen and (max-width: 1200px) {
 		grid-template-columns: repeat(2, 1fr);
 		grid-template-rows: repeat(4, 1fr);
 		gap: 30px 20px;
 	}
+
 	@media screen and (max-width: 768px) {
 		margin-top: 40px;
 	}
+
 	@media screen and (max-width: 576px) {
 		grid-template-columns: 1fr;
 		/* 2.1 и 0.5 значения были получены, если разделить 
@@ -459,10 +511,12 @@ html {
 	grid-column: 4/5;
 	/* Небольшое улучшение */
 	height: 100%;
+
 	@media screen and (max-width: 1200px) {
 		grid-row: 2/4;
 		grid-column: 2/3;
 	}
+
 	@media screen and (max-width: 576px) {
 		grid-row: auto;
 		grid-column: auto;
@@ -471,9 +525,11 @@ html {
 
 #sky {
 	grid-column: 2/4;
+
 	@media screen and (max-width: 1200px) {
 		grid-column: 1/3;
 	}
+
 	@media screen and (max-width: 576px) {
 		grid-column: auto;
 	}
@@ -483,6 +539,7 @@ html {
 	padding-top: 80px;
 	padding-bottom: 100px;
 	background-color: var(--light-color);
+
 	@media screen and (max-width: 768px) {
 		padding: 50px 0;
 	}
@@ -493,19 +550,23 @@ html {
 	display: flex;
 	flex-wrap: wrap;
 	gap: 30px;
+
 	img {
 		width: calc((100% - 90px) / 4);
 		box-shadow: 7px 7px 12px 0px rgba(0, 0, 0, 0.25);
 	}
+
 	@media screen and (max-width: 768px) {
 		& {
 			margin-top: 40px;
 			gap: 20px;
 		}
+
 		img {
 			width: calc((100% - 60px) / 4);
 		}
 	}
+
 	@media screen and (max-width: 576px) {
 		& {
 			margin-top: 30px;
@@ -513,6 +574,7 @@ html {
 			row-gap: 20px;
 			justify-content: space-between;
 		}
+
 		img {
 			width: calc((100% - 36px) / 2);
 		}
@@ -530,15 +592,18 @@ html {
 	font-style: normal;
 	font-weight: 400;
 	line-height: normal;
+
 	@media screen and (max-width: 1024px) {
 		font-size: 16px;
 	}
+
 	@media screen and (max-width: 768px) {
 		padding: 30px var(--footer-padding-inline) 40px var(--footer-padding-inline);
 		flex-direction: column;
 		align-items: flex-start;
 		row-gap: 30px;
 	}
+
 	@media screen and (max-width: 375px) {
 		align-items: center;
 	}
@@ -546,6 +611,7 @@ html {
 
 .footer__addr {
 	font-style: normal;
+
 	@media screen and (max-width: 375px) {
 		order: 3;
 	}
@@ -554,6 +620,7 @@ html {
 .footer__tel {
 	color: var(--light-color, #f5f5f7);
 	text-decoration: none;
+
 	@media screen and (max-width: 375px) {
 		order: 2;
 	}
@@ -564,23 +631,27 @@ html {
 	display: flex;
 	column-gap: 30px;
 	list-style: none;
+
 	li {
 		width: 32px;
 		height: 32px;
 		border: 1px solid var(--light-color, #f5f5f7);
 		background: rgba(217, 217, 217, 0);
+
 		a {
 			display: flex;
 			justify-content: center;
 			align-items: center;
 			width: 100%;
 			height: 100%;
+
 			img {
 				width: 22px;
 				height: 22px;
 			}
 		}
 	}
+
 	@media screen and (max-width: 1024px) {
 		column-gap: 27px;
 	}
